# asimov-bayeswave

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
asimov_bayeswave/: __init__.py  bayeswave.py
asimov_bayeswave/configs/: bayeswave.ini
docs/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
tests/: __init__.py  conftest.py  test_bayeswave.py
